        * Billing :
            - The bricks for related Quotes/SalesOrders/CreditNotes have been improved: better empty expiration date.
              It's now more consistent with the Invoices' brick.
        * Opportunities :
              - The title of the brick which displays related Opportunities for Contact/Organisation has been improved.


== Version 2.6.5 ==

  Users side :
  ------------
    # Apps :
        * Creme_config :
            # The new property types were not marked as custom since the release '2.6'.
              Notice that the fix will only works for new types, it won't fix the types
              you have created the mast months ; if you want to fix them, change the value
              of the column 'creme_core_cremepropertytype.is_custom' to "True"/"1" in your DB.
        * Emails :
            - The email form uses HTML line breaks when the HTML body is copied
              from the plain text body.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The custom field brick displayed inner-edition buttons even when it was disabled.
        # The templatetag {% widget_icon instance=... %} did not use "label" argument.


== Version 2.6.4 ==

  Users side :
  ------------
    # The render of custom menu icons has been fixed for non-square images.
    # In mass-import form, the selector for properties was not our expected widget.
    # In menu entries with custom URLs, links are now opened in a new tab.
    # Some escaping issues have been fixed.
    # Apps :
        * Opportunities :
            - In the blocks for related Invoices, Quotes & Sales Orders :
                - The color of the statuses were not displayed.
                - The multi-inner-edition have been added.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The method 'CremeUser.has_perm()' works now correctly for link permission on models.
        # Javascript :